Se creó con Colab

--- a/Comparación_de_MC.ipynb
+++ b/Comparación_de_MC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3pXG5Xl9eDlTgYxicnppE",
+      "authorship_tag": "ABX9TyMejkutYY+OT16/AVDsRgRY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "vso6PSDmUH_g"
       },
@@ -71,14 +71,23 @@
     {
       "cell_type": "code",
       "source": [
-        "n = 100   # tamaño de la muestra (puntos por simulación)\n",
-        "N = 100   # número de simulaciones (veces que se repite el experimento)"
+        "n = 100\n",
+        "N = 100"
       ],
       "metadata": {
         "id": "4keEnDG3Uh6t"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "definimos la funcion"
+      ],
+      "metadata": {
+        "id": "BFpDA_AwaMJa"
+      }
     },
     {
       "cell_type": "code",
@@ -89,7 +98,7 @@
       "metadata": {
         "id": "IttrwKk8Unq4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +122,7 @@
       "metadata": {
         "id": "jGEVJOGmUqHN"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +149,7 @@
       "metadata": {
         "id": "qw8vBk7UUtXG"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +174,7 @@
       "metadata": {
         "id": "v_lH7zICVDQF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +196,7 @@
       "metadata": {
         "id": "-eMGqwhkVLfp"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +218,7 @@
       "metadata": {
         "id": "3iYshU5vVcgM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +246,7 @@
         "id": "eZdWIa6-VoQn",
         "outputId": "1f76f125-e144-4e9f-e1f7-46a033e7e081"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +277,7 @@
         "id": "ZE9GqJRzVrEx",
         "outputId": "afa83e30-e591-4ea0-ac60-b7af75efdcc7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +320,7 @@
         "id": "yXnuWYNHV2-x",
         "outputId": "e8e6f6a6-626f-41de-a978-c7666c9f4d35"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +362,7 @@
         "id": "seuvIjssV8yE",
         "outputId": "5a59bc79-d865-4806-800f-6a32f8fc9b2e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
